--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "jest": "^27.0.6"
   },
   "dependencies": {
-    "commander": "^8.2.0",
-    "link": "^0.1.5"
+    "commander": "^8.2.0"
   },
   "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Criterios de aceptación mínimos del proyecto](#5-criterios-de-aceptación-mínimos-del-proyecto)\r * [6. Pistas, tips y lecturas complementarias](#6-pistas-tips-y-lecturas-complementarias)",
   "main": "index.js",
