feat(license): Change ISC or MIT

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "type": "git",
     "url": "git+https://github.com/nangebav/REG003-roman-numerals.git"
   },
-  "author": "Nangebav",
-  "license": "ISC",
+  "author": "nangebav",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/nangebav/REG003-roman-numerals/issues"
   },
